# beacon-search-engine-at-scale

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: console-lb.nginx.conf
src/beacon_scale_infra/: __init__.py  __main__.py  errors.py  models.py  protocols.py
src/beacon_scale_infra/cache/: __init__.py  memory.py  redis_cache.py
src/beacon_scale_infra/console/: __init__.py  app.py  artifacts.py  cache.py  cluster_search.py  config.py  dependencies.py  reranker_job.py  reranking.py  response_serialization.py  snippets.py
src/beacon_scale_infra/console/routes/: __init__.py  autocomplete.py  search.py  stats.py
src/beacon_scale_infra/crawl/: __init__.py  dedup.py  models.py  partitioning.py  rate_limiter.py  worker.py
src/beacon_scale_infra/extract/: __init__.py  manifest.py  models.py  page_extractor.py  partitioning.py  worker.py
src/beacon_scale_infra/index/: __init__.py  corpus_catalog.py  doc_id_ranges.py  index_version.py  merge.py  models.py  partition_indexer.py  pipeline.py
src/beacon_scale_infra/pagerank/: __init__.py  link_graph_materializer.py  models.py  pipeline.py
src/beacon_scale_infra/query/: __init__.py  models.py  pipeline.py  shard_discovery.py  shard_index_pipeline.py  shard_replica_service.py
src/beacon_scale_infra/queue/: __init__.py  memory.py  redis_streams.py
src/beacon_scale_infra/registry/: __init__.py  consul.py  local.py
src/beacon_scale_infra/storage/: __init__.py  local.py  s3.py
tests/: conftest.py  test_cache_memory.py  test_cache_redis.py  test_console_app.py  test_console_reranker_job.py  test_console_response_serialization.py  test_console_snippets.py  test_crawl_dedup.py  test_crawl_partitioning.py  test_crawl_rate_limiter.py  test_crawl_worker.py  test_extract_manifest.py  test_extract_page_extractor.py  test_extract_partitioning.py  test_extract_worker.py  test_index_corpus_catalog.py  test_index_doc_id_ranges.py  test_index_merge.py  test_index_partition_indexer.py  test_index_pipeline.py  test_index_version.py  test_models.py  test_pagerank_link_graph_materializer.py  test_pagerank_pipeline.py  test_query_docker_shard_failover.py  test_query_pipeline.py  test_query_shard_discovery.py  test_query_shard_index_pipeline.py  test_query_shard_replica_service.py  test_queue_memory.py  test_queue_redis_streams.py  test_registry_consul.py  test_registry_local.py  test_storage_local.py  test_storage_s3.py
