[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beacon-search-engine-at-scale"
version = "0.1.0"
description = "Shared distributed-systems substrate (object storage, message queue, service registry) for scaling beacon-search-engine from a portfolio demo to a few million pages."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Juan Martos Cuevas", email = "martoscuevasjuan@gmail.com" }]
dependencies = [
    "boto3>=1.34,<2",
    "redis>=5,<6",
    "aiohttp>=3.9,<4",
]

[project.scripts]
beacon-scale-infra = "beacon_scale_infra.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.26,<2",
    "mypy>=1.10,<2",
    "ruff>=0.5,<1",
    "moto[s3]>=5,<6",
    "fakeredis>=2.23,<3",
    "boto3-stubs[s3]>=1.34,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/beacon_scale_infra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "fakeredis.*"
ignore_missing_imports = true
