[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beacon-search-engine-at-scale"
version = "0.1.0"
description = "Shared distributed-systems substrate (object storage, message queue, service registry) for scaling beacon-search-engine from a portfolio demo to a few million pages."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Juan Martos Cuevas", email = "martoscuevasjuan@gmail.com" }]
dependencies = [
    "boto3>=1.34,<2",
    "redis>=5,<6",
    "aiohttp>=3.9,<4",
    "web-crawler-scheduler @ git+https://github.com/juanmmm21/web-crawler-scheduler.git@main",
    "html-content-extractor @ git+https://github.com/juanmmm21/html-content-extractor.git@main",
    "inverted-index-builder @ git+https://github.com/juanmmm21/inverted-index-builder.git@main",
    "index-compression-codec @ git+https://github.com/juanmmm21/index-compression-codec.git@main",
]

[project.scripts]
beacon-scale-infra = "beacon_scale_infra.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.26,<2",
    "mypy>=1.10,<2",
    "ruff>=0.5,<1",
    "moto[s3]>=5,<6",
    "fakeredis>=2.23,<3",
    "boto3-stubs[s3]>=1.34,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/beacon_scale_infra"]

[tool.hatch.metadata]
# web-crawler-scheduler no está publicado en PyPI: se consume como dependencia
# de paquete real vía URL de Git directa (mismo patrón que
# distributed-index-sharding con bm25-ranking-engine, ver ARCHITECTURE.md
# sección "Por qué los diez repos originales no se tocan"). Hatchling rechaza
# por defecto una dependencia PEP 508 por URL directa salvo que se habilite
# explícitamente aquí.
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "fakeredis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# web-crawler-scheduler no publica un marcador py.typed en su distribución
# instalada (aunque su propio src/ pasa mypy --strict dentro de ese repo), así
# que mypy lo trata como no tipado al consumirlo como dependencia desde aquí
# -- mismo patrón ya aplicado a bm25-ranking-engine en distributed-index-sharding.
module = "web_crawler_scheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Mismo caso que web-crawler-scheduler arriba: html-content-extractor tampoco
# publica un marcador py.typed en su distribución instalada, pese a pasar
# mypy --strict dentro de su propio repo.
module = "html_content_extractor.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Mismo caso que web-crawler-scheduler/html-content-extractor arriba:
# inverted-index-builder tampoco publica un marcador py.typed en su
# distribución instalada, pese a pasar mypy --strict dentro de su propio repo.
module = "inverted_index_builder.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Mismo caso que el resto de dependencias del ecosistema arriba:
# index-compression-codec tampoco publica un marcador py.typed en su
# distribución instalada, pese a pasar mypy --strict dentro de su propio repo.
module = "index_compression_codec.*"
ignore_missing_imports = true
