[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beacon-search-engine-at-scale"
version = "0.1.0"
description = "Shared distributed-systems substrate (object storage, message queue, service registry) for scaling beacon-search-engine from a portfolio demo to a few million pages."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Juan Martos Cuevas", email = "martoscuevasjuan@gmail.com" }]
dependencies = [
    "boto3>=1.34,<2",
    "redis>=5,<6",
    "aiohttp>=3.9,<4",
    "web-crawler-scheduler @ git+https://github.com/juanmmm21/web-crawler-scheduler.git@main",
    "html-content-extractor @ git+https://github.com/juanmmm21/html-content-extractor.git@main",
    "inverted-index-builder @ git+https://github.com/juanmmm21/inverted-index-builder.git@main",
    "index-compression-codec @ git+https://github.com/juanmmm21/index-compression-codec.git@main",
    "pagerank-link-analysis @ git+https://github.com/juanmmm21/pagerank-link-analysis.git@main",
    "distributed-index-sharding @ git+https://github.com/juanmmm21/distributed-index-sharding.git@main",
    "query-parser-autocomplete @ git+https://github.com/juanmmm21/query-parser-autocomplete.git@main",
    "learning-to-rank-reranker @ git+https://github.com/juanmmm21/learning-to-rank-reranker.git@main",
    # La app insignia se reutiliza como dependencia de paquete real (fase 6):
    # su contrato de API versionado (models.py), la construcción de snippets
    # (build_snippet) y el lector de stats.json se importan sin modificar --
    # nunca se reescriben aquí (ver ARCHITECTURE.md, fase 6). El paquete
    # Python vive en el subdirectorio backend/ de ese repo.
    "beacon-search-console @ git+https://github.com/juanmmm21/beacon-search-console.git@main#subdirectory=backend",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
]

[project.scripts]
beacon-scale-infra = "beacon_scale_infra.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.26,<2",
    "mypy>=1.10,<2",
    "ruff>=0.5,<1",
    "moto[s3]>=5,<6",
    "fakeredis>=2.23,<3",
    "boto3-stubs[s3]>=1.34,<2",
    # Cliente ASGI para testear la API de la consola (fase 6) sin abrir un
    # puerto real -- mismo patrón que beacon-search-console usa en su propia
    # suite de backend.
    "httpx>=0.27,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/beacon_scale_infra"]

[tool.hatch.metadata]
# web-crawler-scheduler no está publicado en PyPI: se consume como dependencia
# de paquete real vía URL de Git directa (mismo patrón que
# distributed-index-sharding con bm25-ranking-engine, ver ARCHITECTURE.md
# sección "Por qué los diez repos originales no se tocan"). Hatchling rechaza
# por defecto una dependencia PEP 508 por URL directa salvo que se habilite
# explícitamente aquí.
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# `Depends(...)`/`Query(...)` en valores por defecto es el idioma estándar de
# FastAPI para inyección de dependencias, no la trampa de "objeto mutable
# compartido entre llamadas" que B008 existe para detectar -- misma excepción
# que beacon-search-console ya documenta en su propio pyproject.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.mypy]
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "fakeredis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# web-crawler-scheduler no publica un marcador py.typed en su distribución
# instalada (aunque su propio src/ pasa mypy --strict dentro de ese repo), así
# que mypy lo trata como no tipado al consumirlo como dependencia desde aquí
# -- mismo patrón ya aplicado a bm25-ranking-engine en distributed-index-sharding.
module = "web_crawler_scheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Mismo caso que web-crawler-scheduler arriba: html-content-extractor tampoco
# publica un marcador py.typed en su distribución instalada, pese a pasar
# mypy --strict dentro de su propio repo.
module = "html_content_extractor.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Mismo caso que web-crawler-scheduler/html-content-extractor arriba:
# inverted-index-builder tampoco publica un marcador py.typed en su
# distribución instalada, pese a pasar mypy --strict dentro de su propio repo.
module = "inverted_index_builder.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Mismo caso que el resto de dependencias del ecosistema arriba:
# index-compression-codec tampoco publica un marcador py.typed en su
# distribución instalada, pese a pasar mypy --strict dentro de su propio repo.
module = "index_compression_codec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Mismo caso que el resto de dependencias del ecosistema arriba:
# pagerank-link-analysis tampoco publica un marcador py.typed en su
# distribución instalada, pese a pasar mypy --strict dentro de su propio repo.
module = "pagerank_link_analysis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Mismo caso que el resto de dependencias del ecosistema arriba:
# distributed-index-sharding tampoco publica un marcador py.typed en su
# distribución instalada, pese a pasar mypy --strict dentro de su propio repo.
module = "distributed_index_sharding.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Mismo caso que el resto de dependencias del ecosistema arriba: ninguno de
# los tres paquetes que la fase 6 añade (query-parser-autocomplete,
# learning-to-rank-reranker y el backend de beacon-search-console) publica un
# marcador py.typed en su distribución instalada, pese a pasar mypy --strict
# dentro de su propio repo -- mismo patrón que beacon-search-console ya
# documenta en su propio pyproject para sus tres dependencias de paquete.
module = [
    "query_parser_autocomplete.*",
    "learning_to_rank_reranker.*",
    "beacon_search_console.*",
]
ignore_missing_imports = true
